--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,10 @@ name: Node.js CI with Cron + Secrets + CodeQL
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "" ]
   pull_request:
-    branches: [ "main" ]
-  schedule:
-    - cron: "30 0 * * *" # runs daily at 00:30 UTC
+    branches: [ "" ]
+  
 
 jobs:
   build-and-test:
